reset button styles and removed compiled css folder

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
   <meta charset="UTF-8">
@@ -13,10 +13,10 @@
 <body>
   <main>
     <header>
-      <div class="menu menu__container">
-        <div class="buttons">
-          <button class="btn btn__lang">flag</button>
-          <button class="btn btn__theme">celestial</button>
+      <div class="menu">
+        <div class="menu__btns">
+          <button class="menu__btn menu__btn--lang">flag</button>
+          <button class="menu__btn menu__btn--theme">celestial</button>
         </div>
         <nav>
           <ul>
