basic styling and structure writen for the first section

--- a/index.html
+++ b/index.html
@@ -11,26 +11,44 @@
 </head>
 
 <body>
-  <main>
-    <header>
-      <div class="menu">
-        <div class="menu__btns">
-          <button class="menu__btn menu__btn--lang">flag</button>
-          <button class="menu__btn menu__btn--theme">celestial</button>
-        </div>
-        <nav>
-          <ul>
-            <li>Home</li>
-            <li>O mnie</li>
-            <li>Specjalizacja</li>
-            <li>Narzędzia i Technologie</li>
-            <li>Rekomendacje</li>
-          </ul>
-        </nav>
+
+  <header>
+    <div class="menu">
+      <div class="menu__btns">
+        <button class="menu__btn menu__btn--lang">flag</button>
+        <button class="menu__btn menu__btn--theme">celestial</button>
       </div>
-    </header>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>O mnie</li>
+          <li>Specjalizacja</li>
+          <li>Narzędzia i Technologie</li>
+          <li>Rekomendacje</li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main class="main-container">
     <article>
-      <section class="section welcome"></section>
+      <section class="section welcome">
+        <div class="welcome__1">
+
+          <h1 class="welcome__name">paweł wałęga</h1>
+        </div>
+        <div class="welcome__2">
+
+          <h2 class="welcome__profession"><span class="welcome__profession-web-dev">
+              web deweloper
+            </span>
+            <span class="welcome__profession-engineer">
+              inżynier oprogramowania
+            </span>
+          </h2>
+
+        </div>
+        <button type="button" class="welcome__scroll-btn">\/</button>
+      </section>
     </article>
   </main>
 </body>
