--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Paweł Wałęga - Web Developer</title>
-  <link rel="stylesheet" href="css/main.min.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <script defer src="js/index.js"></script>
 </head>
 
