adjusted css of professions header

--- a/index.html
+++ b/index.html
@@ -38,13 +38,17 @@
         </div>
         <div class="welcome__2">
 
-          <h2 class="welcome__profession"><span class="welcome__profession-web-dev">
-              web deweloper
-            </span>
-            <span class="welcome__profession-engineer">
-              inżynier oprogramowania
-            </span>
-          </h2>
+          <div class="welcome__profession">
+            <h2 class="welcome__professions">
+              <div class="welcome__profession-web-dev">
+                frontend web deweloper
+              </div>
+              <div class="welcome__profession-engineer">
+                inżynier oprogramowania
+              </div>
+            </h2>
+            <div class="welcome__separator"></div>
+          </div>
 
         </div>
         <button type="button" class="welcome__scroll-btn">\/</button>
